syntax = "proto3";

option go_package = "github.com/sembh1998/gRCP_flutter_go_proof-of-concept/server/module/infrastructure/serializer/grpc/proto";

message StoreRequest {
    string id = 1;
}

message StoreByIdRequest {
    string id = 1;
}

message StoreByNameRequest {
    string name = 1;
}

message StoreReponse {
    repeated Store Stores = 1;
}

message Store {
    string id = 1;
    string name = 2;
}

service StoreService {
    rpc getStores(StoreRequest) returns (StoreReponse);
    rpc getStoreById(StoreByIdRequest) returns (Store);
    rpc getStoreByName(StoreByNameRequest) returns (Store);
}
